--- a/feedback.html
+++ b/feedback.html
@@ -174,12 +174,11 @@ button {
   <textarea id="message" rows="4"></textarea>
 
   <button onclick="submitFeedback()">Submit Feedback</button>
+
   <footer style="text-align:center;margin-top:20px;font-size:12px;opacity:.7;">
-            Feedback year <span id="year"></span> Contact us <a
-            href="https://arnetworkhouse.in/"><strong>
-            AR Network House.
-            </strong></a>
-</footer>
+    Feedback year <span id="year"></span> Contact us 
+    <a href="https://arnetworkhouse.in/"><strong>AR Network House</strong></a>
+  </footer>
 </div>
 
 <!-- SUCCESS OVERLAY -->
@@ -188,6 +187,9 @@ button {
     <div class="emoji" id="successEmoji"></div>
     <h3 id="successTitle"></h3>
     <p id="successMessage"></p>
+    <p id="successFooter" style="font-size:12px;opacity:0.7;margin-top:6px;">
+      Your feedback process has been successfully completed. Thank you for your time.
+    </p>
     <button onclick="location.reload()">Close</button>
   </div>
 </div>
@@ -215,7 +217,7 @@ function submitFeedback() {
     body: JSON.stringify({
       name: name,
       rating: rating,
-      projectId: projectId,   // ✅ FIXED: now sent to sheet
+      projectId: projectId,
       message: message,
       source: "Feedback Page"
     })
@@ -224,6 +226,7 @@ function submitFeedback() {
   const emoji = document.getElementById("successEmoji");
   const title = document.getElementById("successTitle");
   const msg = document.getElementById("successMessage");
+  const footer = document.getElementById("successFooter");
 
   if (rating <= 2) {
     emoji.innerText = "😔";
@@ -250,9 +253,12 @@ function submitFeedback() {
       "Thank you for your exceptional feedback. Your support is highly appreciated.";
   }
 
+  footer.innerText = "Your feedback process has been successfully completed. Thank you for your time. — AR Network House Team";
+
   document.getElementById("successOverlay").style.display = "flex";
 }
- document.getElementById("year").textContent = new Date().getFullYear();
+
+document.getElementById("year").textContent = new Date().getFullYear();
 </script>
 
 </body>
