--- a/dashboard.html
+++ b/dashboard.html
@@ -114,12 +114,12 @@ body {
     </div>
   </div>
 
-  <!-- Role & Timeline -->
+  <!-- Share Details -->
   <div class="card">
-    <div class="card-title">Role & Timeline</div>
+    <div class="card-title">Share Details</div>
     <div class="grid">
       <div>
-        <div class="label">Percentage</div>
+        <div class="label">Share Percentage</div>
         <div class="value" id="percentage"></div>
       </div>
       <div>
@@ -131,7 +131,7 @@ body {
 
   <!-- Targets & Performance -->
   <div class="card">
-    <div class="card-title">Targets & Performance</div>
+    <div class="card-title">Timeline Targets & Performance</div>
     <div class="grid">
       <div>
         <div class="label">Start Date</div>
@@ -229,4 +229,5 @@ document.getElementById("endDate").innerText = formatDate(u.endDate);
 
 </body>
 </html>
+
 
