--- a/login.html
+++ b/login.html
@@ -142,6 +142,8 @@
     <input id="userId" placeholder="User ID">
     <input id="password" type="password" placeholder="Password">
     <button onclick="login()">Login</button>
+    <p style="margin-top: 16px; font-size: 13px;">
+      <a href="https://arnetworkhouse-oss.github.io/ar-network-house/forgot_password.html" style="color: #2563eb; text-decoration: none;">Forgot Password?</a>
   </div>
 
   <!-- ===== LOADER OVERLAY ===== -->
