--- a/login.html
+++ b/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Secure Login</title>
+  <title>AR Network House Login</title>
 
   <!-- ===== VISUAL LAYER ONLY (NO LOGIC CHANGE) ===== -->
   <style>
@@ -202,3 +202,4 @@
 
 </body>
 </html>
+
