--- a/dashboard.html
+++ b/dashboard.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>User Dashboard</title>
+<title>Employee Details</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
@@ -17,15 +17,26 @@ body {
   background: #111827;
   color: #fff;
   padding: 20px;
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
   align-items: center;
-  justify-content: space-between;
 }
 
-.header-left h2 {
+.header-left {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
+
+.header-center {
+  text-align: center;
+}
+
+.header-center h2 {
   margin: 0;
 }
 
+/* ===== Logout ===== */
 .logout-btn {
   background: #ef4444;
   border: none;
@@ -35,6 +46,7 @@ body {
   font-size: 13px;
   font-weight: 600;
   cursor: pointer;
+  justify-self: end;
 }
 
 .logout-btn:hover {
@@ -87,6 +99,23 @@ body {
   font-size: 22px;
   color: #2563eb;
 }
+
+/* ===== Logo ===== */
+.login-logo {
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.login-logo img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 </style>
 </head>
 
@@ -95,13 +124,30 @@ body {
 <!-- ===== Header ===== -->
 <div class="header">
   <div class="header-left">
-    <h2 id="empName"></h2>
-    <div id="designation"></div>
+    <div class="login-logo">
+      <img src="https://github.com/arnetworkhouse-oss/ar-network-house/blob/main/ar%20logo.jpg?raw=true" alt="AR Network House">
+    </div>
   </div>
+
+  <div class="header-center">
+    <h2>AR Network House</h2>
+  </div>
+
   <button class="logout-btn" onclick="logout()">Logout</button>
 </div>
 
 <div class="container">
+
+  <!-- Official Details -->
+  <div class="card">
+    <div class="card-title">Official Details</div>
+    <div class="grid">
+      <div><div class="label">Name</div><div class="value" id="name"></div></div>
+      <div><div class="label">Designation</div><div class="value" id="designation"></div></div>
+      <div><div class="label">User ID</div><div class="value" id="userId"></div></div>
+      <div><div class="label">Department</div><div class="value" id="department"></div></div>
+    </div>
+  </div>
 
   <!-- Personal Details -->
   <div class="card">
@@ -109,7 +155,6 @@ body {
     <div class="grid">
       <div><div class="label">Email ID</div><div class="value" id="email"></div></div>
       <div><div class="label">Contact No</div><div class="value" id="contact"></div></div>
-      <div><div class="label">Department</div><div class="value" id="department"></div></div>
       <div><div class="label">Report To</div><div class="value" id="reportTo"></div></div>
     </div>
   </div>
@@ -170,11 +215,9 @@ body {
 </div>
 
 <script>
-/* ===== Session Gate ===== */
 const u = JSON.parse(localStorage.getItem("userData"));
 if (!u) location.href = "https://arnetworkhouse-oss.github.io/ar-network-house/login.html";
 
-/* ===== Utilities ===== */
 function formatDate(d) {
   if (!d) return "";
   return new Date(d).toLocaleDateString("en-IN", {
@@ -194,33 +237,26 @@ function safeINR(amount) {
   }).format(n);
 }
 
-/* ===== Logout ===== */
 function logout() {
   localStorage.removeItem("userData");
   location.href = "https://arnetworkhouse-oss.github.io/ar-network-house/login.html";
 }
 
-/* ===== Data Binding ===== */
-document.getElementById("empName").innerText = u.name || "";
+document.getElementById("name").innerText = u.name || "";
 document.getElementById("designation").innerText = u.designation || "";
-
+document.getElementById("userId").innerText = u.userId || "";
+document.getElementById("department").innerText = u.department || "";
 document.getElementById("email").innerText = u.email || "";
 document.getElementById("contact").innerText = u.contact || "";
-document.getElementById("department").innerText = u.department || "";
 document.getElementById("reportTo").innerText = u.reportTo || "";
 
 document.getElementById("percentage").innerText =
-  u.percentage !== undefined && u.percentage !== null && u.percentage !== ""
-    ? u.percentage + "%"
-    : "";
-
+  u.percentage ? u.percentage + "%" : "";
 
 document.getElementById("shareAmount").innerText = safeINR(u.shareAmount);
 document.getElementById("profitTarget").innerText = safeINR(u.profitTarget);
 document.getElementById("profitAchieved").innerText = safeINR(u.profitAchieved);
 document.getElementById("totalProfit").innerText = safeINR(u.totalProfit);
-
-/* 🔑 Column R → Dew Amount (final authority) */
 document.getElementById("dewamm").innerText = safeINR(u.dewamm);
 
 document.getElementById("startDate").innerText = formatDate(u.startDate);
@@ -229,5 +265,3 @@ document.getElementById("endDate").innerText = formatDate(u.endDate);
 
 </body>
 </html>
-
-
