--- a/login.html
+++ b/login.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>AR Network House Login</title>
+  <title>Secure Login</title>
 
-  <!-- ===== VISUAL LAYER ONLY (NO LOGIC CHANGE) ===== -->
   <style>
     * {
       box-sizing: border-box;
@@ -29,25 +28,18 @@
       text-align: center;
     }
 
-    /* ===== LOGO ===== */
-    .login-logo {
+    .login-logo img {
+      max-width: 140px;
       margin-bottom: 20px;
     }
 
-    .login-logo img {
-      max-width: 140px;
-      height: auto;
-    }
-
     h2 {
-      margin: 0 0 16px 0;
+      margin-bottom: 16px;
       color: #1f2937;
-      font-weight: 600;
-      letter-spacing: 0.5px;
     }
 
     p {
-      margin: 0 0 24px 0;
+      margin-bottom: 24px;
       color: #4b5563;
       font-size: 14px;
     }
@@ -55,20 +47,39 @@
     input {
       width: 100%;
       padding: 12px 14px;
-      margin-bottom: 16px;
       border: 1px solid #d1d5db;
       border-radius: 8px;
       font-size: 14px;
-      transition: border-color 0.2s, box-shadow 0.2s;
     }
 
-    input:focus {
-      outline: none;
-      border-color: #2563eb;
-      box-shadow: 0 0 0 3px rgba(37, 99, 235, 0.15);
+    /* ===== PASSWORD ROW FIX ===== */
+    .password-row {
+      display: flex;
+      gap: 8px;
+      margin-bottom: 16px;
     }
 
-    button {
+    .password-row input {
+      flex: 1;
+    }
+
+    .show-box {
+      width: 44px;
+      height: 44px;
+      border: 1px solid #d1d5db;
+      border-radius: 8px;
+      background: #f9fafb;
+      cursor: pointer;
+      font-size: 12px;
+      font-weight: 600;
+      color: #2563eb;
+    }
+
+    .show-box:active {
+      transform: scale(0.95);
+    }
+
+    button.login-btn {
       width: 100%;
       padding: 12px;
       border: none;
@@ -78,18 +89,8 @@
       font-size: 15px;
       font-weight: 600;
       cursor: pointer;
-      transition: background 0.2s, transform 0.1s;
     }
 
-    button:hover {
-      background: #1e40af;
-    }
-
-    button:active {
-      transform: scale(0.98);
-    }
-
-    /* ===== LOADER OVERLAY (UI ONLY) ===== */
     .loader-overlay {
       position: fixed;
       inset: 0;
@@ -100,29 +101,17 @@
       z-index: 9999;
     }
 
-    .loader-box {
-      text-align: center;
-      color: #ffffff;
-    }
-
     .loader-circle {
       width: 80px;
       height: 80px;
-      border: 6px solid rgba(255, 255, 255, 0.2);
-      border-top: 6px solid #ffffff;
+      border: 6px solid rgba(255,255,255,0.2);
+      border-top: 6px solid #fff;
       border-radius: 50%;
       animation: spin 1s linear infinite;
-      margin: 0 auto 16px;
     }
 
     @keyframes spin {
       to { transform: rotate(360deg); }
-    }
-
-    .loader-text {
-      font-size: 14px;
-      font-weight: 600;
-      letter-spacing: 0.5px;
     }
   </style>
 </head>
@@ -131,40 +120,51 @@
 
   <div class="login-card">
 
-    <!-- ===== BRAND LOGO ===== -->
     <div class="login-logo">
-      <img src="https://github.com/arnetworkhouse-oss/ar-network-house/blob/main/ar%20logo.jpg?raw=true" alt="AR Network House">
+      <img src="https://github.com/arnetworkhouse-oss/ar-network-house/blob/main/ar%20logo.jpg?raw=true">
     </div>
 
     <h2>Employee Login</h2>
     <p>Please enter your credentials to access the dashboard.</p>
 
     <input id="userId" placeholder="User ID">
-    <input id="password" type="password" placeholder="Password">
-    <button onclick="login()">Login</button>
-    <p style="margin-top: 16px; font-size: 13px;">
-      <a href="https://arnetworkhouse-oss.github.io/ar-network-house/forgot_password.html" style="color: #2563eb; text-decoration: none;">Forgot Password?</a>
+
+    <!-- ✅ PASSWORD + SQUARE TOGGLE (FIXED) -->
+    <div class="password-row">
+      <input id="password" type="password" placeholder="Password">
+      <button class="show-box" type="button" onclick="togglePassword()">👁</button>
+    </div>
+
+    <button class="login-btn" onclick="login()">Login</button>
+
+    <p style="margin-top:16px;font-size:13px;">
+      <a href="https://arnetworkhouse-oss.github.io/ar-network-house/forgot_password.html">
+        Forgot Password?
+      </a>
+    </p>
   </div>
 
-  <!-- ===== LOADER OVERLAY ===== -->
+  <!-- LOADER -->
   <div class="loader-overlay" id="loader">
-    <div class="loader-box">
+    <div>
       <div class="loader-circle"></div>
-      <div class="loader-text">
-        Authenticating… <span id="progress">0</span>%
-      </div>
+      <p style="color:#fff;">Authenticating… <span id="progress">0</span>%</p>
     </div>
   </div>
 
-  <!-- ===== SCRIPT LAYER (UNCHANGED LOGIC) ===== -->
   <script>
+    function togglePassword() {
+      const pwd = document.getElementById("password");
+      pwd.type = pwd.type === "password" ? "text" : "password";
+    }
+
     function login() {
       const loader = document.getElementById("loader");
       const progressText = document.getElementById("progress");
 
       loader.style.display = "flex";
-
       let progress = 0;
+
       const interval = setInterval(() => {
         if (progress < 100) {
           progress++;
@@ -175,17 +175,15 @@
       fetch("https://script.google.com/macros/s/AKfycbzPQvT_qfowk1kYaoo1DF6hbMI2UL3UV0jAf5zeUW1Jdj-dDMCoGm2-4IOzGGOmdDoHhg/exec", {
         method: "POST",
         body: JSON.stringify({
-          userId: document.getElementById("userId").value,
-          password: document.getElementById("password").value
+          userId: userId.value,
+          password: password.value
         })
       })
       .then(res => res.json())
       .then(data => {
         clearInterval(interval);
-
         if (data.status === "success") {
           localStorage.setItem("userData", JSON.stringify(data.user));
-          progressText.textContent = "100";
           window.location.href = "https://arnetworkhouse-oss.github.io/ar-network-house/dashboard.html";
         } else {
           loader.style.display = "none";
@@ -193,13 +191,11 @@
         }
       })
       .catch(() => {
-        clearInterval(interval);
         loader.style.display = "none";
-        alert("System Error. Please retry.");
+        alert("System Error");
       });
     }
   </script>
 
 </body>
 </html>
-
